Fixed gameoverscreen, changed unitsize. Bullets still invisible

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,37 @@ body {
 
 canvas {width 100%; height: 100%}
 
-#startGame {
-    /*text*/
+#blocker {
+    position: absolute;
+    width: 100%;
+	height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+
+#startscreen {
+    width: 100%;
+	height: 100%;
+    display: -webkit-box;
+	display: -moz-box;
+	display: box;
+    
+    -webkit-box-orient: horizontal;
+	-moz-box-orient: horizontal;
+    box-orient: horizontal;
+
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    box-pack: center;
+
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    box-align: center;
+
+    color: #ffffff;
+    text-align: center;
+
+    cursor: pointer;
+    /*
     color: white;
     font-size: 32;
     text-shadow: 0px -2px 0px rgb(0,100,150),
@@ -24,4 +53,30 @@ canvas {width 100%; height: 100%}
     
     text-align: center;
     text-transform: uppercase;
+    */
+}
 
+#gameoverscreen {
+    width: 100%;
+	height: 100%;
+    display: -webkit-box;
+	display: -moz-box;
+	display: box;
+    
+    -webkit-box-orient: horizontal;
+	-moz-box-orient: horizontal;
+    box-orient: horizontal;
+
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    box-pack: center;
+
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    box-align: center;
+
+    color: #ffffff;
+    text-align: center;
+
+    cursor: pointer;
+}
